--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# data and output
+data
+output
+
+# Rproj
+*.Rproj
+
 # History files
 .Rhistory
 .Rapp.history
@@ -34,3 +41,4 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+.Rproj.user
